--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /****** General ***********/
 * {
   font-family: "Raleway", sans-serif;
+  font-weight: 400;
 }
 
 :root {
@@ -9,8 +10,9 @@
   --filter-bg-color: #deebff;
 }
 
-.main-container {
-  max-width: 1440px;
+body {
+  display: flex;
+  justify-content: center;
 }
 
 /* /////////////// HEADER \\\\\\\\\\\\\\\\\\ */
@@ -29,7 +31,7 @@ header .left-container {
 }
 
 header .left-container .logo-booki {
-  width: 61.09px;
+  width: 61px;
   height: 19px;
 }
 
@@ -37,25 +39,14 @@ header .left-container .logo-booki {
 
 .right-container {
   display: flex;
-  flex-direction: row;
   gap: 68px;
   align-self: flex-start;
 }
 
-.right-container .left-text-label {
-  width: 112px;
-  height: 19px;
+.right-container a {
   padding-top: 16px;
-  font-family: "Raleway";
-  font-weight: 400;
-}
-
-.right-container .right-text-label {
-  width: 63px;
-  height: 19px;
-  padding-top: 16px;
-  font-family: "Raleway";
-  font-weight: 400;
+  border-top: 2px transparent solid;
+  border-bottom: 2px transparent solid;
 }
 
 .right-container a:visited {
@@ -66,7 +57,7 @@ header .left-container .logo-booki {
 .right-container a:focus,
 .right-container a:focus:visited {
   color: blue;
-  border-top: 2px blue solid;
+  border-top-color: blue;
 }
 
 /* /////////////// MAIN \\\\\\\\\\\\\\\\\\ */
@@ -75,17 +66,124 @@ header .left-container .logo-booki {
   color: var(--main-color);
 }
 
-body {
-  display: flex;
-  justify-content: center;
-}
-
 .main-container {
   width: 100%;
   max-width: 1440px;
   padding: 0 50px;
   box-sizing: border-box;
 }
+/*  /////// INFO GROUP \\\\\\\\*/
+
+.info-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.headline h2 {
+  height: 26px;
+  margin-bottom: 0px;
+  font-weight: 700;
+}
+
+.headline p {
+  height: 19px;
+  margin-top: 8px;
+  margin-bottom: 0px;
+}
+
+/*  /////// SEARCH BAR \\\\\\\\*/
+
+.search-bar {
+  width: max-content;
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  gap: 0px;
+}
+
+.repere-container {
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  background: #f2f2f2;
+}
+
+img {
+}
+
+.search {
+  flex: 1;
+  padding: 15px;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-left: none;
+  border-right: none;
+}
+
+.info-group .search-bar button {
+  background-color: #0065fc; /* Right part background color */
+  color: #fff;
+  padding: 15px 16px 15px 16px;
+  border: none;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  cursor: pointer;
+}
+
+/*  /////// FILTER \\\\\\\\   */
+
+.filter-bar {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
+
+.filter-bar .filter-container {
+  display: flex;
+  gap: 15px;
+}
+
+.filter-bar .filter-container .filter-button {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.filter-bar h3 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: "Raleway";
+  font-weight: 700;
+}
+
+.filter-bar .filter-container .filter-button .filter {
+  display: flex;
+  height: 50px;
+  padding: 4px 19px 4px 19px;
+  align-items: center;
+  border-radius: 25px;
+  gap: 10px;
+  border: 2px solid;
+  border-color: #d9d9d9;
+  background-color: white;
+}
+
+.filter-bar .filter-container .filter-button .filter h3 {
+  font-family: "Raleway";
+  font-weight: 700;
+}
+
+.infobar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/*    TO DO  */
 
 a {
   color: inherit;
@@ -124,6 +222,7 @@ a {
 .hebergements-and-populaires {
   display: flex;
   justify-content: space-between;
+  gap: 40px;
 }
 
 .hebergements-and-populaires section {
@@ -136,7 +235,61 @@ a {
 /****** Hebergements ***********/
 .hebergements {
   width: 65%;
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
 }
+
+.hebergements-and-populaires h2 {
+  display: flex;
+  align-items: start;
+  font-family: "Raleway";
+  font-weight: 700;
+}
+
+.hebergements-cards {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.hebergements-cards .card {
+  margin-top: 33px;
+}
+
+.hebergements-cards a {
+  flex-basis: calc((100% - 60px) / 3);
+}
+
+.hebergements-cards img {
+  width: 100%;
+  height: 124px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.hebergements-cards .card .card-content {
+  padding: 0px 15px 0px 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.hebergements-cards .card-title {
+  margin-top: 10px;
+  margin-bottom: 4px;
+  font-weight: 700;
+}
+
+.hebergements-cards .card-subtitle {
+  margin: 0;
+}
+
+.hebergements-cards .card-rating {
+  margin-bottom: 5px;
+}
+*/
 
 /****** Populaires ***********/
 .populaires {
@@ -188,6 +341,16 @@ a {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+  .filter-bar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .filter-bar .filter-container .filter-button {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
   .hebergements-and-populaires {
     flex-direction: column;
   }
@@ -222,5 +385,57 @@ a {
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-  /* ... */
+  header {
+    flex-direction: column;
+    height: 115px;
+  }
+
+  header .left-container {
+    display: flex;
+    justify-content: center;
+    height: 79px;
+    align-items: center;
+  }
+
+  header .left-container .logo-booki {
+    width: 61px;
+    height: 19px;
+  }
+
+  header .right-container {
+    width: 100%;
+    gap: 0px;
+    justify-content: flex-end;
+  }
+
+  header .right-container a {
+    width: 50%;
+    text-align: center;
+    padding-bottom: 15px;
+    padding-top: 0px;
+  }
+
+  .right-container a:active,
+  .right-container a:focus,
+  .right-container a:focus:visited {
+    border-bottom-color: blue;
+    border-top: transparent;
+  }
+
+  body,
+  .main-container {
+    padding: 0;
+  }
+
+  .filter-bar .filter-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .filter-bar .filter-container .filter-button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
 }
