--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 body {
   display: flex;
   justify-content: center;
+  gap: 35px;
 }
 
 /* /////////////// HEADER \\\\\\\\\\\\\\\\\\ */
@@ -71,6 +72,7 @@ header .left-container .logo-booki {
   max-width: 1440px;
   padding: 0 50px;
   box-sizing: border-box;
+  gap: 30px;
 }
 /*  /////// INFO GROUP \\\\\\\\*/
 
@@ -79,22 +81,27 @@ header .left-container .logo-booki {
   flex-direction: column;
 }
 
+.headline {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 .headline h2 {
-  margin-bottom: 0px;
+  padding: 0px;
+  margin: 0px;
   font-weight: 700;
 }
 
 .headline p {
   height: 19px;
-  margin-top: 8px;
-  margin-bottom: 0px;
+  margin: 0px;
 }
 
 /*  /////// SEARCH BAR \\\\\\\\*/
 
 .search-bar {
   width: max-content;
-  margin-top: 30px;
   display: flex;
   align-items: center;
   gap: 0px;
@@ -112,6 +119,7 @@ header .left-container .logo-booki {
 .search-bar input {
   border-top-color: #f2f2f2;
   border-bottom-color: #f2f2f2;
+  outline: none;
 }
 
 .search {
@@ -121,6 +129,11 @@ header .left-container .logo-booki {
   border-bottom: 1px solid #ccc;
   border-left: none;
   border-right: none;
+  width: calc(100% - 40px);
+}
+
+.info-group {
+  gap: 35px;
 }
 
 .info-group .search-bar .submit {
@@ -140,7 +153,6 @@ header .left-container .logo-booki {
 /*  /////// FILTER \\\\\\\\   */
 
 .filter-bar {
-  margin-top: 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -158,11 +170,22 @@ header .left-container .logo-booki {
   gap: 15px;
 }
 
+.filter-bar .filter-title {
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: "Raleway";
+  font-weight: 700;
+}
+
 .filter-bar h3 {
   margin-bottom: 0px;
   margin-top: 0px;
   font-family: "Raleway";
   font-weight: 700;
+}
+
+.filter-bar h4 {
+  display: none;
 }
 
 .filter-bar .filter-container .filter-button .filter {
@@ -188,6 +211,9 @@ header .left-container .logo-booki {
   gap: 10px;
 }
 
+.infobar .p {
+  margin: 0px;
+}
 /*    TO DO  */
 
 a {
@@ -254,10 +280,18 @@ a {
 
 .hebergements-cards {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   gap: 30px;
   width: 100%;
   flex-wrap: wrap;
+}
+
+.hebergements-cards .card {
+  height: 100%;
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
+  padding: 5px 5px 15px 5px;
 }
 
 .hebergements-cards a {
@@ -275,20 +309,22 @@ a {
   padding: 0px 15px 0px 15px;
   display: flex;
   flex-direction: column;
+  gap: 8px;
+}
+
+.hebergements-cards .card .card-content .stars {
+  width: 81px;
+  height: 13px;
+  border-radius: unset;
 }
 
 .hebergements-cards .card-title {
-  margin-top: 10px;
-  margin-bottom: 4px;
   font-weight: 700;
+  margin: 0px;
 }
 
 .hebergements-cards .card-subtitle {
   margin: 0;
-}
-
-.hebergements-cards .card-rating {
-  margin-bottom: 5px;
 }
 
 .hebergements-and-populaires h3 {
@@ -340,8 +376,10 @@ a {
   margin: 0;
 }
 
-.populaires-cards .card-rating {
+.populaires-cards .stars {
   margin-bottom: 5px;
+  height: 12px;
+  width: 68px;
 }
 
 .button-afficherPlus {
@@ -369,15 +407,14 @@ a {
 .activites .activites-title h2 {
   font-family: "Raleway";
   font-weight: 700;
-  padding-bottom: 30px;
 }
 
 .activites-cards {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   gap: 30px;
   width: 100%;
-  flex-wrap: wrap;**********
+  flex-wrap: wrap;
 }
 
 .activites-cards a {
@@ -421,10 +458,11 @@ a {
 .footer-container .footer-column h3 {
   font-family: "Raleway";
   font-weight: 700;
+  margin: 0px;
 }
 
 .footer-container .footer-column a {
-  padding-bottom: 20px;
+  gap: 15px;
 }
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
@@ -460,16 +498,25 @@ a {
     justify-content: space-between;
   }
 
+  .populaires-cards .card {
+    margin: 0px;
+  }
+
+  .populaires .stars {
+    border-radius: unset;
+    object-fit: cover;
+  }
+
   .populaires-cards a {
     width: 30%;
   }
 
   .populaires-cards .card-title {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .populaires-cards .card-subtitle {
-    font-size: 13px;
+    font-size: 14px;
   }
 
   .act-card img {
@@ -516,9 +563,15 @@ a {
     border-top-color: transparent;
   }
 
-  body,
+  body {
+    margin: 0px;
+  }
+
   .main-container {
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
   }
 
   form {
@@ -540,6 +593,9 @@ a {
     border: none;
     cursor: pointer;
     display: contents;
+    height: 49px;
+    width: 49px;
+    filter: drop-shadow(0px 4px 4px black);
   }
 
   .filter-bar .filter-container {
@@ -561,11 +617,107 @@ a {
     flex-basis: calc((100% - 10px) / 2);
     display: flex;
   }
+
+  .filter-bar .filter-title {
+    display: contents;
+  }
+
+  .filter-bar h3 {
+    display: none;
+  }
+  .filter-bar h4 {
+    display: contents;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    font-family: "Raleway";
+    font-weight: 700;
+  }
+
   .act-card img {
-    height: 140;
+    height: 140px;
   }
 
   .info-group {
     padding: 0px 20px 0px 20px;
+  }
+
+  .populaires {
+    order: 1;
+    padding: 30px 20px 30px 20px;
+    margin-top: 0px;
+    gap: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .populaires-cards {
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 0px;
+  }
+
+  .populaires-cards a {
+    width: 100%;
+    height: 146px;
+  }
+
+  .hebergements-and-populaires section {
+    border-radius: 0px;
+    padding: 30px;
+    box-sizing: border-box;
+  }
+
+  .hebergements-cards {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .hebergements-cards img {
+    padding-bottom: 5px;
+  }
+  .hebergements-cards .stars {
+    padding-bottom: 0px;
+  }
+
+  .hebergements {
+    background-color: #ffffff !important;
+    order: 2;
+    gap: 15px;
+  }
+
+  .hebergements h3 {
+    margin: 0px;
+  }
+
+  .activites {
+    order: 3;
+    gap: 30px;
+  }
+
+  .activites-cards {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .activites-cards a {
+    height: 200px;
+  }
+
+  .activites-cards h3 {
+    margin: 0px;
+    padding: 20px;
+  }
+
+  .footer {
+    background-color: #f2f2f2;
+  }
+  .footer-container {
+    flex-direction: column;
+    padding: 30px;
+    gap: 50px;
+  }
+
+  .footer-column {
+    gap: 15px;
   }
 }
