--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,13 @@ header .left-container .logo-booki {
   box-sizing: border-box;
   gap: 30px;
 }
+
+.global-main-container {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
 /*  /////// INFO GROUP \\\\\\\\*/
 
 .info-group {
@@ -105,6 +112,9 @@ header .left-container .logo-booki {
   display: flex;
   align-items: center;
   gap: 0px;
+  border: #f2f2f2 1px solid;
+  height: 46px;
+  border-radius: 15px;
 }
 
 .repere-container {
@@ -402,6 +412,7 @@ a {
   display: flex;
   flex-direction: column;
   padding: 30px 30px 30px 30px;
+  gap: 30px;
 }
 
 .activites .activites-title h2 {
@@ -490,12 +501,14 @@ a {
   .populaires {
     width: 100%;
     margin-top: 50px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
   }
 
   .populaires-cards {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    gap: 20px;
   }
 
   .populaires-cards .card {
@@ -588,14 +601,16 @@ a {
   }
 
   .info-group .search-bar .submit-mobile {
-    background-color: #0065fc; /* Right part background color */
+    display: flex;
     color: #fff;
-    border: none;
     cursor: pointer;
-    display: contents;
+    padding: 15px 16px 15px 16px;
     height: 49px;
     width: 49px;
-    filter: drop-shadow(0px 4px 4px black);
+    background-color: #0065fc;
+    border-radius: 15px;
+    border-width: 0px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   }
 
   .filter-bar .filter-container {
