--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/****** General ***********/
 * {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
@@ -16,52 +15,44 @@ body {
   gap: 35px;
 }
 
-/* /////////////// HEADER \\\\\\\\\\\\\\\\\\ */
-
 header {
   display: flex;
   justify-content: space-between;
   height: 79px;
 }
 
-/* HEADER LEFT */
-
-/* à faire: adjust logo size */
-header .left-container {
+header .logo-container {
   align-self: center;
 }
 
-header .left-container .logo-booki {
+header .logo-container .logo-booki {
   width: 61px;
   height: 19px;
 }
 
-/* HEADER RIGHT */
-
-.right-container {
+.main-nav {
   display: flex;
   gap: 68px;
   align-self: flex-start;
+  font-size: 16px;
 }
 
-.right-container a {
+.main-nav a {
   padding-top: 16px;
   border-top: 2px transparent solid;
   border-bottom: 2px transparent solid;
 }
 
-.right-container a:visited {
-  color: black; /* default color */
+.main-nav a:visited {
+  color: black;
 }
 
-.right-container a:active,
-.right-container a:focus,
-.right-container a:focus:visited {
-  color: blue;
-  border-top-color: blue;
+.main-nav a:active,
+.main-nav a:focus,
+.main-nav a:focus:visited {
+  color: #0065fc;
+  border-top-color: #0065fc;
 }
-
-/* /////////////// MAIN \\\\\\\\\\\\\\\\\\ */
 
 .fa-solid {
   color: var(--main-color);
@@ -81,8 +72,6 @@ header .left-container .logo-booki {
   gap: 35px;
 }
 
-/*  /////// INFO GROUP \\\\\\\\*/
-
 .info-group {
   display: flex;
   flex-direction: column;
@@ -94,18 +83,17 @@ header .left-container .logo-booki {
   gap: 8px;
 }
 
-.headline h2 {
+.headline h1 {
   padding: 0px;
   margin: 0px;
   font-weight: 700;
+  font-size: 22px;
 }
 
 .headline p {
   height: 19px;
   margin: 0px;
 }
-
-/*  /////// SEARCH BAR \\\\\\\\*/
 
 .search-bar {
   width: max-content;
@@ -140,8 +128,8 @@ header .left-container .logo-booki {
 .search {
   flex: 1;
   padding: 15px;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  border-top: 1px solid #f2f2f2;
+  border-bottom: 1px solid #f2f2f2;
   border-left: none;
   border-right: none;
   width: calc(100% - 40px);
@@ -152,8 +140,8 @@ header .left-container .logo-booki {
 }
 
 .info-group .search-bar .submit {
-  background-color: #0065fc; /* Right part background color */
-  color: #fff;
+  background-color: #0065fc;
+  color: #ffffff;
   padding: 16px 16px 16px 16px;
   border: none;
   border-top-right-radius: 15px;
@@ -165,8 +153,6 @@ header .left-container .logo-booki {
 .info-group .search-bar .submit-mobile {
   display: none;
 }
-
-/*  /////// FILTER \\\\\\\\   */
 
 .filter-bar {
   display: flex;
@@ -209,7 +195,7 @@ header .left-container .logo-booki {
   gap: 10px;
   border: 2px solid;
   border-color: #d9d9d9;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .filter-bar .filter-container .filter-button .filter:hover {
@@ -225,6 +211,7 @@ header .left-container .logo-booki {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-bottom: 35px;
 }
 
 .infobar i {
@@ -249,7 +236,7 @@ a {
 }
 
 .card {
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 20px;
   padding: 5px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
@@ -271,7 +258,6 @@ a {
   color: var(--main-bg-color);
 }
 
-/****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
   display: flex;
   justify-content: space-between;
@@ -285,7 +271,6 @@ a {
   box-sizing: border-box;
 }
 
-/****** Hebergements ***********/
 .hebergements {
   width: 65%;
   gap: 30px;
@@ -347,7 +332,6 @@ a {
   font-weight: 700;
 }
 
-/****** Populaires ***********/
 .populaires {
   width: 32%;
 }
@@ -361,6 +345,10 @@ a {
 .populaires-cards .card {
   display: flex;
   margin-top: 33px;
+}
+
+.populaires-cards .card article {
+  display: flex;
 }
 
 .populaires-cards img {
@@ -408,11 +396,22 @@ a {
   outline: inherit;
 }
 
-/****** Activités ***********/
+.activites section {
+  background-color: #ffffff;
+}
+
 .activites {
   display: flex;
   flex-direction: column;
   padding: 30px 30px 30px 30px;
+  gap: 30px;
+  margin-bottom: 35px;
+  background-color: #ffffff !important;
+}
+
+.activites article {
+  display: flex;
+  flex-direction: column;
   gap: 30px;
 }
 
@@ -434,7 +433,7 @@ a {
 }
 
 .act-card {
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 20px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   display: flex;
@@ -453,7 +452,6 @@ a {
   padding: 20px 19px 20px 19px;
   margin: 0px;
 }
-/* ///////  FOOTER \\\\\\\ */
 
 .footer-container {
   display: flex;
@@ -545,34 +543,34 @@ a {
     height: 115px;
   }
 
-  header .left-container {
+  header .logo-container {
     display: flex;
     justify-content: center;
     height: 79px;
     align-items: center;
   }
 
-  header .left-container .logo-booki {
+  header .logo-container .logo-booki {
     width: 61px;
     height: 19px;
   }
 
-  header .right-container {
+  header .main-nav {
     width: 100%;
     gap: 0px;
     justify-content: flex-end;
   }
 
-  header .right-container a {
+  header .main-nav a {
     width: 50%;
     text-align: center;
     padding-bottom: 15px;
     padding-top: 0px;
   }
 
-  .right-container a:active,
-  .right-container a:focus,
-  .right-container a:focus:visited {
+  .main-nav a:active,
+  .main-nav a:focus,
+  .main-nav a:focus:visited {
     border-bottom-color: #0065fc;
     border-top-color: transparent;
   }
@@ -603,7 +601,7 @@ a {
 
   .info-group .search-bar .submit-mobile {
     display: flex;
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
     padding: 15px 16px 15px 16px;
     height: 48px;
@@ -643,10 +641,6 @@ a {
     display: contents;
   }
 
-  .filter-bar .filter-container .filter-button .filter span {
-    font-weight: 400;
-  }
-
   .act-card img {
     height: 140px;
   }
@@ -672,7 +666,6 @@ a {
 
   .populaires-cards a {
     width: 100%;
-    height: 146px;
   }
 
   .hebergements-and-populaires section {
@@ -703,6 +696,7 @@ a {
   .activites {
     order: 3;
     gap: 30px;
+    margin-bottom: 0px;
   }
 
   .activites-cards {
