--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ header .logo-container .logo-booki {
 }
 
 .infobar i {
-  padding: 10px;
+  padding: 9px 9px 10px 9px;
   border: 1px solid;
   border-color: #d9d9d9;
   border-radius: 50%;
@@ -635,6 +635,10 @@ a {
   .filter-bar .filter-container .filter-button .filter {
     flex-basis: calc((100% - 10px) / 2);
     display: flex;
+  }
+
+  .filter-bar .filter-container .filter-button .filter i {
+    width: 22px;
   }
 
   .filter-bar .filter-title {
